2.8 Crashes on adding Inverse Kinematics #60185

Closed
opened 2019-01-05 07:03:36 +01:00 by Raphael Catossi · 7 comments

System Information
Operating system: Windows 10 64
Graphics card: Geforce GTX 960

Blender Version
Broken: 2.80.39

Short description of error
When adding "Inverse Kinematics" Bone Constraint to one of the finger bones the application shuts down.

Exact steps for others to reproduce the error
When opening the file the mentioned bone is already selected.
Select the "Bone Constraints" tab on the right side of the screen.
Click on the constraints menu and choose "Inverse Kinematics".
Armature crash.blend

**System Information** Operating system: Windows 10 64 Graphics card: Geforce GTX 960 **Blender Version** Broken: 2.80.39 **Short description of error** When adding "Inverse Kinematics" Bone Constraint to one of the finger bones the application shuts down. **Exact steps for others to reproduce the error** When opening the file the mentioned bone is already selected. Select the "Bone Constraints" tab on the right side of the screen. Click on the constraints menu and choose "Inverse Kinematics". [Armature crash.blend](https://archive.blender.org/developer/F6180701/Armature_crash.blend)

Added subscriber: @rcarts

Added subscriber: @rcarts

Added subscriber: @jrubio

Added subscriber: @jrubio
Jose C. Rubio self-assigned this 2019-01-18 23:49:40 +01:00

First-time contributor here. I managed to reproduce with the Linux build. I'll start looking into this.

First-time contributor here. I managed to reproduce with the Linux build. I'll start looking into this.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I'll mark this as confirmed then.

I'll mark this as confirmed then.

This issue was referenced by 76437b903d

This issue was referenced by 76437b903de37ee96a5306429fe8e17ccbaa1de7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60185
No description provided.